# terminal-pixel-animation

./: Cargo.toml  README.md  build.rs
core-renderers/: braille.odin  half_block.zig
core_renderers/: braille.odin  half_block.zig
examples/: demo.rs
react/: package-lock.json  package.json
react/src/: hooks.tsx  index.ts
src/: lib.rs
test/react-test/: package-lock.json  package.json  vite.config.ts
test/react-test/src/: App.tsx
